--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Content Include="config.ini">
+    <Content Include="config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libherrington\.clang-format">
