--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-
+    name: Build on Ubuntu 16.04
     runs-on: ubuntu-16.04
     
     steps:
@@ -15,11 +15,14 @@ jobs:
       with:
         submodules: true
     
-    - run: echo "{ \"hello\": \"there\" }" > config.json
+    - name: Make dummy config
+      run: echo "{ \"hello\": \"there\" }" > config.json
     
-    - run: mkdir -p build/release
+    - name: Create build directory
+      run: mkdir -p build/release
     
-    - run: dotnet publish -c Release -r ubuntu.16.04-x64 -o ./build/release/
+    - name: Build
+      run: dotnet publish -c Release -r ubuntu.16.04-x64 -o ./build/release/
     
     - uses: actions/upload-artifact@master
       with:
