I don't like yaml 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         submodules: true
     
     - name: Make dummy config
-      run: echo "{ \"hello\": \"there\" }" > config.json
+      run: echo { } > config.json
     
     - name: Create build directory
       run: mkdir -p build/release
