--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,8 @@ jobs:
     runs-on: ubuntu-16.04
     
     steps:
-    - uses: actions/checkout@master
-      with:
-        submodules: true
-    - uses: actions/setup-dotnet@master
+    - uses: actions/checkout@v2
+    - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.0.100'
     
